; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_flex_pipe.c_ice_chk_pkg_version.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_flex_pipe.c_ice_chk_pkg_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_pkg_ver = type { i64, i64 }

@ICE_PKG_SUPP_VER_MAJ = common dso_local global i64 0, align 8
@ICE_PKG_SUPP_VER_MNR = common dso_local global i64 0, align 8
@ICE_ERR_NOT_SUPPORTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ice_pkg_ver*)* @ice_chk_pkg_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ice_chk_pkg_version(%struct.ice_pkg_ver* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ice_pkg_ver*, align 8
  store %struct.ice_pkg_ver* %0, %struct.ice_pkg_ver** %3, align 8
  %4 = load %struct.ice_pkg_ver*, %struct.ice_pkg_ver** %3, align 8
  %5 = getelementptr inbounds %struct.ice_pkg_ver, %struct.ice_pkg_ver* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ICE_PKG_SUPP_VER_MAJ, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load %struct.ice_pkg_ver*, %struct.ice_pkg_ver** %3, align 8
  %11 = getelementptr inbounds %struct.ice_pkg_ver, %struct.ice_pkg_ver* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @ICE_PKG_SUPP_VER_MNR, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %9, %1
  %16 = load i32, i32* @ICE_ERR_NOT_SUPPORTED, align 4
  store i32 %16, i32* %2, align 4
  br label %18

17:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %15
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
